@@ -4,7 +4,7 @@
 #
 #    Generated by GiD to Impact Interface Module 
 #
-#    Version 05.05.2011
+#    Version --.04.2013
 #
 #------------------------------------------------------------------------------
 #    D A T A  F O R M A T:      Fembic I M P A C T
@@ -238,7 +238,7 @@ ELEMENTS OF TYPE Rod_2
 *format "%8i nodes = [%1i,%1i] D = %6.3f material = mat_%1i"
 *ElemsNum*ElemsConec*thick*matset *\
 *if(strcmp(matprop(CONTACT_TYPE),"OFF")==0)
-factor = *matprop(CONTACT_FACTOR) *\
+contact = OFF *\
 *endif
 *if(strcmp(matprop(CONTACT_TYPE),"BASIC")==0)
 factor = *matprop(CONTACT_FACTOR) friction = *matprop(CONTACT_FRICTION) *\
